random(4): Squash non-error timeout codes from tsleep(9).

In both scenarios a timeout (EWOULDBLOCK) is considered as a
normal condition and the error should not pop up to upper layers.

PR:		231181
Submitted by:	cem
Reported by:	lev
Reviewed by:	vangyzen, markm, delphij
Approved by:	re (kib)
Approved by:	secteam (delphij)
Differential Revision:	https://reviews.freebsd.org/D17049


git-svn-id: svn+ssh://svn.freebsd.org/base/head@338542 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f